--- a/public/index.mustache
+++ b/public/index.mustache
@@ -15,9 +15,9 @@
   <a href="/signup">Sign Up!</a>
   <a href="/login">Login!</a>
   <br>
-  <a href="/" action="">Logout</a>
+  <a href="/" action="" id="logout">Logout</a>
   <br>
-  <a href="https://www.instagram.com/ooopcaboy_/" id="dot">.</a>
+  <a href="https://www.instagram.com/ooopcaboy_/" id="░">░</a>
 </body>
 
 </html>
