--- a/public/style.css
+++ b/public/style.css
@@ -17,10 +17,15 @@ a {
   color: #000000;
 }
 
-#home{
-    text-decoration: none;
+#home {
+  text-decoration: none;
 }
-#dot{
-    text-transform: none;
-    text-decoration: none;
+
+#logout {
+  text-decoration: none;
+}
+
+#░ {
+  text-transform: none;
+  text-decoration: none;
 }
